--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,14 +40,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^0.2.1",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.292.0",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
-    "react-day-picker": "^8.10.1",
     "react-dom": "^19.2.0",
+    "react-day-picker": "^8.10.1",
     "react-hook-form": "^7.66.1",
     "react-resizable-panels": "^3.0.6",
     "react-router-dom": "^7.9.6",
@@ -93,6 +93,8 @@
     "npx": "^10.2.2",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "ajv": "8.17.1",
+    "ajv-formats": "2.1.1"
   }
 }
